apps/services/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  selector:
    matchLabels:
      app: vaultwarden
  replicas: 1
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - image: vaultwarden/server:latest
          imagePullPolicy: Always
          name: vaultwarden
          ports:
            - containerPort: 80
          volumeMounts:
            - name: vaultwarden-data
              mountPath: /data
              readOnly: false
      volumes:
        - name: vaultwarden-data
          persistentVolumeClaim:
            claimName: vaultwarden
